[gd_scene load_steps=8 format=2]

[ext_resource path="res://2Scripts/Intro.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://2Resources/Minecraft.ttf"

[sub_resource type="DynamicFont" id=3]
size = 36
extra_spacing_top = 6
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 28
extra_spacing_top = 6
font_data = SubResource( 2 )

[node name="Panel" type="Panel"]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 136.0
margin_right = 1120.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "In the not too distant future, aliens invaded Earth.

Within a few months, humans forces are reduced to few pockets of stronghold.

As the supreme commander of mankind, what will you do now?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
visible = false
margin_left = 128.0
margin_top = 544.0
margin_right = 704.0
margin_bottom = 608.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Jump into the time machine... thingy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Surrender" type="Button" parent="."]
visible = false
margin_left = 832.0
margin_top = 544.0
margin_right = 1152.0
margin_bottom = 608.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Surrender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Surrender" to="." method="_on_Surrender_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
